# air-quality-openenv

./: Dockerfile  README.md  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
